Lab6: sending map of commands fix
It wasn't serializdble. So I added functional interface SerialFunction and change type of arguments array from List to ArrayList
After this it become obvious, that size of sending message to big. So just rising it .....